cart icon small fixes

--- a/project/src/component/Header/HeaderSearch/HeaderSearch.less
+++ b/project/src/component/Header/HeaderSearch/HeaderSearch.less
@@ -248,8 +248,8 @@
       bottom: -6px;
       left: -6px;
       box-sizing: border-box;
-      width: 16px;
-      height: 16px;
+      width: 18px;
+      height: 18px;
       background: #E6704B;
       border-radius: 50%;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
@@ -257,7 +257,7 @@
       font-family: Poppins, sans-serif;
       font-style: normal;
       font-weight: 600;
-      font-size: @base-font-size;
+      font-size: @base-font-size - 2px;
       line-height: @base-line-height - 4px;
       color: #FFFFFF;
     }
